# smart_spend_tracker

./: CHECKPOINT.md
.github/workflows/: backend-ci.yaml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 42608b320693_create_expenses_table.py
backend/src/app/: main.py
backend/src/app/core/: config.py  db.py  exception_handlers.py  logging.py  middleware.py
backend/src/app/modules/expenses/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/app/shared/: exception.py
backend/test/: conftest.py  test_expenses.py
infra/: docker-compose.yaml
